--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@mohammedsrehan/react-responsive-carousel": "^3.2.23",
     "@react-icons/all-files": "^4.1.0",
+    "@react-spring/web": "^9.6.0",
     "@sefailyasoz/react-carousel": "^1.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -27,11 +28,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-plx": "^2.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-touch-carousel": "^0.10.2",
     "router": "^1.3.7",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
