--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-speech-recognition": "^3.9.0",
     "@types/react-stickynode": "^4.0.0",
     "bootstrap": "^3.4.1",
+    "jotai": "^1.11.2",
     "mdb-react-ui-kit": "^5.0.0",
     "node-sass": "^7.0.3",
     "pure-react-carousel": "^1.30.1",
