--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-plx": "^2.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
+    "react-stickynode": "^4.1.0",
     "react-touch-carousel": "^0.10.2",
     "router": "^1.3.7",
     "slick-carousel": "^1.8.1",
+    "smooth-scrollbar": "^8.8.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
