--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-signature-canvas": "^1.0.6",
     "react-slick": "^0.29.0",
     "react-stickynode": "^4.1.0",
     "react-touch-carousel": "^0.10.2",
